--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,15 @@ VERSION=v5
 # Port to listen on
 PORT=3000
 
-# Chain id the indexer is running on
-CHAIN_ID=1
+# RPCs and WS URls
+RPC_1=https://eth-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
+WS_1=wss://eth-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
+
+RPC_137=https://polygon-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
+WS_137=wss://polygon-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
 
 # Required by all admin APIs (via the `X-Admin-Api-Key` header)
 ADMIN_API_KEY=MY_KEY
-
-# Http and WebSocket provider URLs
-BASE_NETWORK_HTTP_URL=https://eth-mainnet.alchemyapi.io/v2/ALCHEMY_KEY
-BASE_NETWORK_WS_URL=wss://eth-mainnet.alchemyapi.io/v2/ALCHEMY_KEY
 
 # Postgres and Redis connection URLs
 DATABASE_URL=postgresql://postgres:password@127.0.0.1:5432/postgres?schema=public
