--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "release": "standard-version",
     "migration": "node-pg-migrate -m ./src/migrations",
     "start:dev": "nodemon --inspect src/index.ts",
-    "seed:currenices": "yarn build; node -r module-alias/register ./dist/scripts/update-currencies.js"
+    "seed:currencies": "yarn build; node -r module-alias/register ./dist/scripts/update-currencies.js",
+    "seed:usd-prices": "yarn build; node -r module-alias/register ./dist/scripts/update-usd-prices.js"
   },
   "dependencies": {
     "@bull-board/hapi": "4.0.1",
