--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "compile": "tsc",
     "build": "yarn clean; yarn compile",
     "start": "node -r module-alias/register ./dist/index.js",
-    "migrate": "node ./node_modules/node-pg-migrate/bin/node-pg-migrate -m ./src/migrations --no-check-order",
+    "migrate": "NODE_TLS_REJECT_UNAUTHORIZED=0 node ./node_modules/node-pg-migrate/bin/node-pg-migrate -m ./src/migrations --no-check-order",
     "debug": "yarn build && yarn migrate up; node --inspect -r module-alias/register ./dist/index.js",
     "commitlint": "commitlint --edit",
     "lint-check": "eslint --max-warnings 0 --ext .js,.ts,.json src",
