--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,12 @@ LOOKSRARE_API_KEY=
 
 # For filling/cancelling orders from X2Y2
 X2Y2_API_KEY=
+
+
+NEW_RELIC_NO_CONFIG_FILE=true
+NEW_RELIC_APP_NAME=pacman-indexer
+NEW_RELIC_LICENSE_KEY=key
+NEW_RELIC_LOG_LEVEL=info
+NEW_RELIC_APPLICATION_LOGGING_ENABLED=true
+NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
+NEW_RELIC_APPLICATION_LOGGING_METRICS_ENABLED=true
