--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.4",
     "@hapi/vision": "^6.1.0",
+    "@newrelic/winston-enricher": "^4.0.1",
     "@opensea/stream-js": "^0.0.21-rc.1",
     "@poprank/rankings": "^1.1.20",
     "@reservoir0x/sdk": "0.0.237",
@@ -73,6 +74,7 @@
     "joi": "17.x",
     "json-stable-stringify": "^1.0.1",
     "module-alias": "^2.2.2",
+    "newrelic": "^9.11.0",
     "node-cron": "^3.0.0",
     "node-html-parser": "^5.3.3",
     "node-pg-migrate": "^6.0.0",
