--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ NEW_RELIC_LOG_LEVEL=info
 NEW_RELIC_APPLICATION_LOGGING_ENABLED=true
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
 NEW_RELIC_APPLICATION_LOGGING_METRICS_ENABLED=true
+
+#SYNC Redis connection URLs
+SYNC_REDIS_URL=redis://localhost:6379
