--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ WS_137=wss://polygon-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
 ADMIN_API_KEY=MY_KEY
 
 # Postgres and Redis connection URLs
+DATABASE_POOL_SIZE=60
 DATABASE_URL=postgresql://postgres:password@127.0.0.1:5432/postgres?schema=public
 REDIS_URL=redis://redis:password@127.0.0.1:6379
 BACKEND_DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/postgres?schema=public
