--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^5.14.0",
     "arweave": "^1.10.23",
     "aws-sdk": "^2.1148.0",
+    "axios": "^1.3.6",
     "bullmq": "^1.75.1",
     "dd-trace": "^3.5.0",
     "dotenv": "^10.0.0",
@@ -107,6 +108,7 @@
     "@/events-sync": "dist/sync/events"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "tsconfig-paths": "^4.1.0"
   }
 }
