--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ WS_137=wss://polygon-mainnet.g.alchemy.com/v2/ALCHEMY_KEY
 
 # Required by all admin APIs (via the `X-Admin-Api-Key` header)
 ADMIN_API_KEY=MY_KEY
+JWT_SECRET=JWT_SECRET
+WEBHOOK_SERVER_KEY=WEBHOOK_SERVER_KEY
 
 # Postgres and Redis connection URLs
 DATABASE_POOL_SIZE=60
