--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "ethers": "5.6.8",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
+    "hapi-auth-jwt2": "^10.4.0",
     "hapi-swagger": "14.2.4",
     "husky": "^7.0.4",
     "ioredis": "^4.28.0",
     "jest": "^29.0.3",
     "joi": "17.x",
     "json-stable-stringify": "^1.0.1",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "newrelic": "^9.11.0",
     "node-cron": "^3.0.0",
@@ -107,6 +109,7 @@
     "@/events-sync": "dist/sync/events"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "tsconfig-paths": "^4.1.0"
   }
 }
