--- a/config.properties
+++ b/config.properties
@@ -8,3 +8,4 @@ Repo_Url_Https=https://github.com/priori-capital/wallet-indexer.git
 Repo_Branch=dev-opstree
 Repo_Credential_Id=priori_repo
 REGION=us-east-1
+dir=
