Commiting menifest files

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,9 @@
+CI=true 
+CD=true 
+SecretStage=true
+ConfigMapStage=true
+DeploymentStage=true
+ServiceStage=true
 SERVICE=dev-priori-indexer
 ECR_REGISTRY=377321893543.dkr.ecr.us-east-1.amazonaws.com
 ENV=dev
@@ -9,3 +15,13 @@ Repo_Branch=dev-opstree
 Repo_Credential_Id=priori_repo
 REGION=us-east-1
 dir=
+Config_FileName=configmap
+ConfigMapName=dev-indexer-config
+NameSpace=dev
+Secret_FileName=secret.yml
+Service_FileName=service.yml
+Deployment_FileName=deployment.yml
+DeploymentName=dev-indexer-deployment
+Menifest_dir=k8-Menifest
+ContainerName=dev-indexer-container
+
