--- a/config.properties
+++ b/config.properties
@@ -3,7 +3,7 @@ CD=true
 SecretStage=true
 ConfigMapStage=true
 DeploymentStage=true
-ServiceStage=false
+ServiceStage=true
 Service_FileName=service.yml
 SERVICE=dev-priori-indexer
 ECR_REGISTRY=377321893543.dkr.ecr.us-east-1.amazonaws.com
