--- a/config.properties
+++ b/config.properties
@@ -19,7 +19,7 @@ dir=
 Config_FileName=configmap
 ConfigMapName=dev-indexer-config
 NameSpace=dev
-Secret_FileName=secret.yml
+Secret_Name=dev-indexer-secret
 Deployment_FileName=deployment.yml
 DeploymentName=dev-indexer-deployment
 Menifest_dir=k8-Menifest
