--- a/config.properties
+++ b/config.properties
@@ -20,6 +20,7 @@ Config_FileName=configmap
 ConfigMapName=dev-indexer-config
 NameSpace=dev
 Secret_Name=dev-indexer-secret
+Secret_Path=/indexer
 Deployment_FileName=deployment.yml
 DeploymentName=dev-indexer-deployment
 Menifest_dir=k8-Menifest
