--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,9 @@
 CI=true
 CD=true
-SecretStage=true
-ConfigMapStage=true
-DeploymentStage=true
-ServiceStage=false
-Service_FileName=service.yml
+Secret_Stage=true
+Configmap_Stage=true
+Deployment_Stage=true
+Service_Stage=false
 SERVICE=dev-priori-indexer
 ECR_REGISTRY=377321893543.dkr.ecr.us-east-1.amazonaws.com
 ENV=dev
@@ -15,13 +14,14 @@ Repo_Url_Https=https://github.com/priori-capital/wallet-indexer.git
 Repo_Branch=dev-opstree
 Repo_Credential_Id=priori_repo
 REGION=us-east-1
-dir=
-Config_FileName=configmap
-ConfigMapName=dev-indexer-config
-NameSpace=dev
+Dockerfile_Dir=
+Config_File_Name=configmap
+Configmap_Name=dev-indexer-config
+Name_Space=dev
 Secret_Name=dev-indexer-secret
 Secret_Path=/indexer
-Deployment_FileName=deployment.yml
-DeploymentName=dev-indexer-deployment
-Menifest_dir=k8-Menifest
-ContainerName=dev-indexer-container
+Service_File_Name=service.yml
+Deployment_File_Name=deployment.yml
+Deployment_Name=dev-indexer-deployment
+Menifest_Dir=k8-Menifest
+Container_Name=dev-indexer-container
