--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "joi": "17.x",
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
+    "kafkajs": "^2.2.4",
     "module-alias": "^2.2.2",
     "newrelic": "^9.11.0",
     "node-cron": "^3.0.0",
