--- a/k8-Menifest/config.properties
+++ b/k8-Menifest/config.properties
@@ -19,7 +19,7 @@ Config_File_Name=configmap
 Configmap_Name=dev-indexer-config
 Name_Space=dev
 Secret_Name=dev-indexer-secret
-Secret_Path=/indexer
+Secret_Path=/dev-indexer
 Service_File_Name=service.yml
 Deployment_File_Name=deployment.yml
 Deployment_Name=dev-indexer-deployment
